# agent-balatro-codex

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
balatro_agent/: __init__.py  __main__.py  actions.py  agents.py  analysis.py  auto_evolution.py  cli.py  client.py  elite.py  evolution.py  lookahead.py  measure.py  model.py  orchestrator.py  recorder.py  runner.py  scoring_sim.py  search.py  seeds.py  sim_evolution.py
balatro_agent/agents/: __init__.py  base.py  booster.py  consumable.py  economy.py  hand.py  joker_order.py  round.py  shop.py  tarot_targets.py
config/: eval-seeds.json  search.json
docs/: execution-flow.html
examples/: selecting_hand_state.json  shop_state.json
research/: README.md  agent-decision-memory-overview.html  decisions.md  findings.md  memory.md  questions.md  run_prompt.md  sources.md
research/runs/: 2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-06.md  2026-06-07.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  (+4 more)
scripts/: auto-evolve-evaluate.sh  build-replay.sh  doctor.sh  eval.sh  promotion-gate.sh  record-human-start.sh  record-human-stop.sh  research-run.sh  seed-cohorts.sh  start.sh  step.sh  subagent-task.sh  summarize-eval.sh
strategy/: README.md  index.md
tests/: test_actions.py  test_analysis.py  test_auto_evolution.py  test_cli.py  test_client.py  test_elite.py  test_evolution.py  test_hand_agent.py  test_lookahead.py  test_measure.py  test_model.py  test_orchestrator.py  test_recorder.py  test_runner.py  test_scoring_sim.py  test_search.py  test_seeds.py  test_shop_agent.py
(+175 files in other folders)
